@@ -10,5 +10,6 @@ examples/login_shell
 examples/test_script
 examples/linux_admin
 examples/audio_stuff
+examples/choose
 py/TermClui.py
 py/test_script
