@@ -52,3 +52,4 @@
 20101108 1.62 speech silences speakup if it's running
 20101109 1.62 speech uses espeak if eflite isn't there, ctrl-X quits choose()
 20101110 1.62 CLUI_MOUSE=OFF disables mouse-handling; bug fixed in ask_for_clue
+20101118 1.63 CLUI_MOUSE=OFF ask() pronounces the char being backspaced
